use RandomForest instead of simple DecisionTree

--- a/digit-recognizer/script.ipynb
+++ b/digit-recognizer/script.ipynb
@@ -15,7 +15,8 @@
     "'''\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn import tree"
+    "from sklearn import tree\n",
+    "from sklearn.ensemble import RandomForestClassifier"
    ]
   },
   {
@@ -317,6 +318,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model2 = RandomForestClassifier()\n",
+    "model2 = model2.fit(X, Y)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {
     "collapsed": true
@@ -359,7 +372,8 @@
    },
    "outputs": [],
    "source": [
-    "outputs = model.predict(test_df.values)"
+    "#outputs = model.predict(test_df.values)\n",
+    "outputs = model2.predict(test_df.values)"
    ]
   },
   {
@@ -373,7 +387,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 2 9 ..., 3 9 2]\n"
+      "[2 0 9 ..., 3 9 2]\n"
      ]
     }
    ],
@@ -421,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +445,7 @@
      "output_type": "stream",
      "text": [
       "[[    1     2]\n",
-      " [    2     2]\n",
+      " [    2     0]\n",
       " [    3     9]\n",
       " ..., \n",
       " [27998     3]\n",
@@ -447,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
